--- a/HTML/05-link.html
+++ b/HTML/05-link.html
@@ -12,7 +12,7 @@
         <li><a href="#reactjs">React</a></li>
         <li><a href="04-listeler.html#js">Listeler (JavaScript)</a></li>
         <li><a href="#xyz">CSS</a></li>
-        <li><a href="">Link</a></li>
+        <li><a href="https://www.google.com/" target="_blank">Go to Google</a></li>
         <li><a href="">Link</a></li>
     </ul>
 <h2>HTML</h2>
