--- a/HTML/05-link.html
+++ b/HTML/05-link.html
@@ -9,12 +9,17 @@
 <body>
     <ul>
         <li><a href="03-practice.html">Practice</a></li>
-        <li><a href="#reactjs">React</a></li>
+        <li><a href="#reactjs" title="React uygulamarinda useEffect kullanimi">React</a></li>
         <li><a href="04-listeler.html#js">Listeler (JavaScript)</a></li>
         <li><a href="#xyz">CSS</a></li>
         <li><a href="https://www.google.com/" target="_blank">Go to Google</a></li>
+        <li><a href="img/marek-piwnicki-G_6kPyje9Lk-unsplash.jpg">Click to open image</a></li>
+        <li><a href="docs/HTML5NotesForProfessionals.pdf">Click to open HTML Notes</a></li>
+        <li><a href="docs/CSSNotesForProfessionals.zip">Click to open CSS Notes</a></li>
         <li><a href="">Link</a></li>
     </ul>
+
+
 <h2>HTML</h2>
 <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde earum enim tempora necessitatibus obcaecati eligendi beatae, consequuntur similique corporis distinctio quas molestiae laborum quae dolorum! Quaerat temporibus perferendis soluta? Saepe.</span><span>Ad consequuntur non dolores quae cumque est inventore veniam iure architecto eos expedita recusandae accusamus distinctio, aliquam officia omnis deleniti nesciunt. Fugit unde vero laborum minima sint repellat consequatur perspiciatis?</span><span>Dolore, placeat dolorum neque sapiente, quos temporibus cumque a repellat quia numquam ut sint dolorem pariatur vel sed expedita dignissimos asperiores consectetur. Veniam tempora, deserunt eligendi beatae eum pariatur sunt.</span><span>Quos veniam tempora excepturi dolorem esse sunt odit, voluptatibus nisi quod voluptatem vel eum deserunt. Nesciunt provident, delectus ducimus, eum quos totam labore quidem, fugiat nobis distinctio ipsum sapiente voluptates.</span><span>Voluptatum non ratione laboriosam tempore earum. Iure unde vero, ut modi ducimus ipsam reprehenderit at quos minima qui iusto sapiente labore ad animi. Omnis quas mollitia libero officiis sequi ex.</span></p>
 
