--- a/HTML/05-link.html
+++ b/HTML/05-link.html
@@ -16,6 +16,10 @@
         <li><a href="img/marek-piwnicki-G_6kPyje9Lk-unsplash.jpg">Click to open image</a></li>
         <li><a href="docs/HTML5NotesForProfessionals.pdf">Click to open HTML Notes</a></li>
         <li><a href="docs/CSSNotesForProfessionals.zip">Click to open CSS Notes</a></li>
+        <li><a href="mailto:zsari@techproed.com">Send E-mail</a></li>
+        <li><a href="tel:+0123456789">Call me!!</a></li>
+        <li><a href="https:/wa.me/123456789">WhatsApp</a></li>
+        <li><a href="">Link</a></li>
         <li><a href="">Link</a></li>
     </ul>
 
